Fixed scroll indicator top spacing

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ h6 {
 
 
 .scroll-indicator {
-    padding-top: 8vh;
+    padding-top: 4vh;
     display: flex;
     justify-content: center;
     align-items: center;
